# cude_code

./: CMakeLists.txt  README.md  build.sh
Matmul/: matrix_transopse.cu  matrix_transpose.cu  shared_memory_matmul.cu  thread_tile_matmul.cu
kernels/RMSNorm/: RMSNorm.cu
kernels/transpose/: matrix_transpose.cu
matmul/: Makefile  naive_matmul.cu  shared_memory_matmul.cu  thread_tile_matmul.cu
